# Go_It_Python_Web

Fast_Api/: pyproject.toml
Fast_Api/src/: schemas.py
Fast_Api_Auth/: .coverage  .env  docker-compose.yml  main.py  pyproject.toml  readme.md  test.db
HW10_Django/: pyproject.toml
HW10_Django/hw_project/: db.sqlite3
HW10_Django/hw_project/hw_project/: settings.py
HW10_Django/hw_project/quotes/: forms.py  models.py  urls.py  utils.py  views.py
HW10_Django/hw_project/quotes/migrations/: 0001_initial.py
HW10_Django/hw_project/quotes/static/quotes/: style.css
HW10_Django/hw_project/quotes/templates/quotes/: index.html
HW10_Django/hw_project/quotes/templatetags/: extract.py
HW10_Django/hw_project/users/: forms.py  urls.py  views.py
HW10_Django/hw_project/users/templates/users/: password_reset_complete.html  password_reset_email.html  signin.html
HW10_Django/hw_project/utils/: add_quotes_to_mongo.py  authors.json  migration.py
HW2_Poetry/: Dockerfile  requirements.txt
HW4_Sockets/: server.py
HW5_Async/: currency.py
HW6_SQL/: HW6_SQLITE.sqlite  Script.sql  main.py  ops.sql  query_1-10.sql  seeds.py
HW9/: authors.json  main.py
HW_1/: classes.py
HW_2/: LICENSE  README.md  pyproject.toml  setup.py
HW_3/: hw_part2.py  sort.py
Tests/: async.py  async_training.py  if.py  les_6_2.py  test.py
Tests/Module_12_Auth/: main.py  pyproject.toml
Tests/Module_12_Auth/base/: app.py  auth.py  sql_app.db
Tests/Module_12_Auth/conspect/: app.py  auth.py  db.py  sql_app.db
Tests/Module_12_Auth/refresh_token/: app.py  auth.py  db.py
(+120 files in other folders)
