[tool.poetry]
name = "hw10-django"
version = "0.1.0"
description = ""
authors = ["MartynyukAndriy <andriy.martynyuk.if@gmail.com>"]
readme = "README.md"
packages = [{include = "hw10_django"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
pymongo = "^4.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
